[gd_scene load_steps=2 format=3 uid="uid://cak4m6n3p8q10"]

[ext_resource type="Script" uid="uid://d1pc4cy8y70xp" path="res://world/Option/option.gd" id="1_option"]

[node name="OptionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_option")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.25, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="MasterVolumeValue" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "100%"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
value = 80.0

[node name="MusicVolumeValue" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "80%"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
value = 80.0

[node name="SFXVolumeValue" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "80%"
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back"

[connection signal="value_changed" from="Panel/VBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
